# ggvlib

./: .gcloudignore  .gitignore  README.md  build-release.sh  deploy.sh  local.py  main.py  pyproject.toml  requirements.txt  run-locally.sh
.github/workflows/: run-tests.yml  static.yml
docs/: conf.py  index.rst
docs/_static/: custom.css
gcloud-registry/: auth.sh  build-release.sh  publish.sh
ggv/: log.py
ggv/detect/: __init__.py  storage.py
ggvlib/: config.py  logging.py  parsing.py
ggvlib/appsflyer/: api.py
ggvlib/google/: bigquery.py  cloudsql.py  drive.py  forms.py  people.py  pubsub.py  scheduler.py  schemas.py  secrets.py  sheets.py  storage.py  utils.py
ggvlib/hubspot/: __init__.py  api.py  schemas.py
ggvlib/io/: files.py  json.py  yaml.py
ggvlib/mixpanel/: api.py
ggvlib/productivity/: decorators.py  jobs.py
ggvlib/reporting/: mail.py
ggvlib/twilio/: __init__.py  api.py  parsing.py
tests/: conftest.py  test_common.py  test_io.py
