[tool.poetry]
name = "ggvlib"
version = "0.2.11"

description = ""
authors = ["Adam Hoffstein <adam.hoffstein@gogox.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
google-cloud-bigquery = "^3.3.5"
loguru = "0.5.0"
pandas = "^1.5.1"
pyyaml = "^6.0"
google-cloud-storage = "^2.5.0"
google-cloud-bigquery-storage = "^2.16.2"
db-dtypes = "^1.0.4"
google-api-python-client = "^2.65.0"
pydantic = "^1.10.2"
aiohttp = "^3.8.3"
google-cloud-secret-manager = "^2.12.6"
google-crc32c = "^1.5.0"
google-cloud-scheduler = "^2.7.3"
jsonschema = "^4.17.0"
google-auth-oauthlib = "^0.8.0"
sendgrid = "^6.9.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.10.0"
Sphinx = "^5.3.0"
sphinx-rtd-theme = "^1.0.0"
sphinx-autoapi = "^2.0.0"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^0.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry_bumpversion.file."ggvlib/__init__.py"]